# api/routes/users.js
@@ -1,4 +1,9 @@
 const express = require('express');
 const router = express.Router();
+const { validate } = require('../middlewares');
+const { userController } = require('../controllers');
+
+router.route('/')
+  .post(validate.createUser, userController.createOne);
 
 module.exports = router;
